[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
verify_ssl = true
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Jason Ren", email = "jasonbest@vip.qq.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "mkdocs-material[imaging]<10.0.0,>=9.6.3",
    "mkdocs-git-revision-date-localized-plugin<2.0.0,>=1.3.0",
    "mkdocs-glightbox<1.0.0,>=0.4.0",
    "jieba<1.0.0,>=0.42.1",
    "vue-lexer<1.0.0,>=0.0.4",
]
name = "note-site-jason"
version = "0.1.0"
description = "Jason's note site."
readme = "README.md"

[project.urls]
repository = "https://github.com/jasonren0403/notes"
